--- a/style.css
+++ b/style.css
@@ -1,43 +1,48 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-family: "Gill Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", sans-serif;
 }
 
 .selector-for-some-widget {
-	box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 header {
-	width: 100%;
-	background-color: #3173dc;
-	display: flex;
-	justify-content: center;
+  width: 100%;
+  background-color: #3173dc;
+  display: flex;
+  justify-content: center;
 }
 .heading {
-	padding: 2rem 0;
-	color: #fff;
-	font-size: 2rem;
+  padding: 2rem 0;
+  color: #fff;
+  font-size: 2rem;
 }
 
 ul {
-	justify-content: center;
-	display: flex;
-	flex-wrap: wrap;
-	margin: 30px 0;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 30px 0;
 }
 li {
-	list-style: none;
-	padding: 10px 12px;
-	cursor: pointer;
-	color: rgb(37, 37, 37);
-	font-weight: 600;
-	text-shadow: 1px 0px 4px rgba(150, 150, 150, 1);
-	font-size: 1.2rem;
+  list-style: none;
+  padding: 10px 12px;
+  cursor: pointer;
+  color: rgb(37, 37, 37);
+  font-weight: 600;
+  text-shadow: 1px 0px 4px rgba(150, 150, 150, 1);
+  font-size: 1.2rem;
 }
 
 li:hover {
-	color: rgb(0, 0, 0);
-	text-decoration: underline;
-	/* border-bottom: 4px solid rgba(79, 199, 255, 0.781); */
+  color: rgb(0, 0, 0);
+  text-decoration: underline;
+  /* border-bottom: 4px solid rgba(79, 199, 255, 0.781); */
+}
+
+canvas {
+  justify-content: center;
+  padding-bottom: 100px;
 }
