--- a/style.css
+++ b/style.css
@@ -1,64 +1,64 @@
 * {
-	margin: 0;
-	padding: 0;
-	font-family: "Gill Sans", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", sans-serif;
 }
 
 .selector-for-some-widget {
-	box-sizing: content-box;
+  box-sizing: content-box;
 }
 
 header {
-	width: 100%;
-	background-color: #3173dc;
-	display: flex;
-	justify-content: center;
+  width: 100%;
+  background-color: #2f6fd6;
+  display: flex;
+  justify-content: center;
 }
 .heading {
-	padding: 2rem 0;
-	color: #fff;
-	font-size: 2rem;
+  padding: 2rem 0;
+  color: #fff;
+  font-size: 2rem;
 }
 
 ul {
-	justify-content: center;
-	display: flex;
-	flex-wrap: wrap;
-	margin: 30px 0;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 30px 0;
 }
 li {
-	list-style: none;
-	padding: 10px 12px;
-	cursor: pointer;
-	color: rgb(37, 37, 37);
-	font-weight: 600;
-	text-shadow: 1px 0px 4px rgba(150, 150, 150, 0.63);
-	font-size: 1.2rem;
+  list-style: none;
+  padding: 10px 12px;
+  cursor: pointer;
+  color: rgb(37, 37, 37);
+  font-weight: 600;
+  text-shadow: 1px 0px 4px rgba(150, 150, 150, 0.63);
+  font-size: 1.2rem;
 }
 
 canvas {
-	justify-content: center;
-	padding-bottom: 25px;
-	height: 130px;
+  justify-content: center;
+  padding-bottom: 25px;
+  height: 130px;
 }
 .graph-container {
-	margin: 2rem auto 4rem auto;
+  margin: 2rem auto 4rem auto;
 }
 .crop-name {
-	margin-right: 5px;
+  margin-right: 5px;
 }
 .card {
-	border: none;
+  border: none;
 }
 .container {
-	margin-bottom: 2rem !important;
-	padding: 1rem;
-	border-radius: 6px;
-	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
+  margin-bottom: 2rem !important;
+  padding: 1rem;
+  border-radius: 6px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23) !important;
 }
 .active,
 .crop-name:hover {
-	background-color: #3173dc;
-	border-radius: 8px;
-	color: rgb(255, 255, 255);
+  background-color: #3173dc;
+  border-radius: 8px;
+  color: rgb(255, 255, 255);
 }
